v0.9.2

* [BGBUILD-148] Add support for building CentOS/RHEL images on Fedora
* [BGBUILD-204] Fedora 15 appliance networking start on boot failed
* [BGBUILD-208] Kickstart files not working with 0.9.1
* [BGBUILD-205] Error while converting to EC2 when guest OS is CentOS/RHEL 5
* [BGBUILD-213] CloudSigma support

v0.9.1

* [BGBUILD-188] Use libuestfs instead mounting partitions manually for EC2 appliances
* [BGBUILD-97] some filesystems dont get unmounted on BG interruption
* [BGBUILD-155] Images built on Centos5.x (el5) for VirtualBox kernel panic (/dev/root missing)
* [BGBUILD-190] Allow to specify kernel variant (PAE or not) for Fedora OS
* [BGBUILD-196] GuestFS fails mounting partitions where more then 3 partitions are present
* [BGBUILD-200] /sbin/e2label: Filesystem has unsupported feature(s) while trying to open /dev/sda1
* [BGBUILD-194] Add support for ElasticHosts cloud
* [BGBUILD-202] Unable to get valid context for ec2-user after login on AMI

v0.9.0

* [BGBUILD-174] Move plugins to boxgrinder-build gem
* [BGBUILD-169] S3 plugin temporary work-around for EL5
* [BGBUILD-103] README to indicate supported operating systems / requirements
* [BGBUILD-175] Rewrite boxgrinder CLI to remove thor dependency
* [BGBUILD-81] post command execution w/ setarch breaks commands which are scripts
* [BGBUILD-173] Include setarch package in default package list for RPM-based OSes
* [BGBUILD-177] Fedora 13 builds have enabled firewall although they shouldn't have it
* [BGBUILD-178] Remove sensitive data from logs
* [BGBUILD-179] Boolean and numeric parameters in hash-like values are not recognized
* [BGBUILD-176] Fail the build with appropriate message if any of post section commands fails to execute
* [BGBUILD-183] Add support for Fedora 15

v0.8.1

* [BGBUILD-141] Long delay after "Preparing guestfs" message when creating new image
* [BGBUILD-150] Cyclical inclusion dependencies in appliance definition files are not detected/handled