@@ -155,6 +155,7 @@ popd
 - [BGBUILD-208] Kickstart files not working with 0.9.1
 - [BGBUILD-205] Error while converting to EC2 when guest OS is CentOS/RHEL 5
 - [BGBUILD-213] CloudSigma support
+- [BGBUILD-209] Wrong /etc/mtab on Fedora 15 appliances causes errors
 
 * Thu Mar 17 2011 Marek Goldmann <mgoldman@redhat.com> - 0.9.1-1
 - Upstream release: 0.9.1
