@@ -5,6 +5,7 @@ v0.9.2
 * [BGBUILD-208] Kickstart files not working with 0.9.1
 * [BGBUILD-205] Error while converting to EC2 when guest OS is CentOS/RHEL 5
 * [BGBUILD-213] CloudSigma support
+* [BGBUILD-209] Wrong /etc/mtab on Fedora 15 appliances causes errors
 
 v0.9.1
 
